--- a/css/all.css
+++ b/css/all.css
@@ -93,7 +93,7 @@ video {
 
 body {
 	line-height: 1;
-	background: #fff;
+	background: #fcfcfc;
 }
 
 article,
@@ -255,7 +255,7 @@ section {
 	top: 0;
 	left: 0;
 	z-index: 10;
-    background: #fff;
+    background: #fcfcfc;
 }
 
 .header__inner {
@@ -324,16 +324,11 @@ section {
 
 .hero__video {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
+    width: 100%;
 	height: 100%;
 }
 
 .hero__video video {
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
 }
 
 .hero__logo {
