--- a/css/all.css
+++ b/css/all.css
@@ -166,7 +166,7 @@ select {
 
 	border: 1px solid transparent;
 	color: #000c49;
-	background-color: #FCFCFC;
+	background-color: #fcfcfc;
 }
 textarea::-webkit-input-placeholder,
 input::-webkit-input-placeholder {
@@ -192,7 +192,7 @@ input:-webkit-autofill:active {
 .container {
 	display: block;
 	position: relative;
-	overflow: hidden;
+	/* overflow: hidden; */
 	width: 100%;
 	padding: 0 20px;
 	margin: 0 auto 0 auto;
@@ -206,7 +206,7 @@ footer,
 section {
 	display: block;
 	position: relative;
-	overflow: hidden;
+	/* overflow: hidden; */
 	width: 100%;
 }
 
@@ -231,19 +231,27 @@ section {
 	border-radius: 30px;
 	background: #292929;
 	border: none;
+	cursor: pointer;
+	transition: all 0.3s;
+	border: 1px solid transparent;
 }
 
+.catalog-btn:hover {
+	background: #fff;
+	color: #292929;
+	border-color: #292929;
+}
 
 .selfStart {
-    align-self: flex-start;
+	align-self: flex-start;
 }
 
 .selfCenter {
-    align-self: center;
+	align-self: center;
 }
 
 .selfEnd {
-    align-self: flex-end;
+	align-self: flex-end;
 }
 
 /* COMMON STYLES */
@@ -255,7 +263,7 @@ section {
 	top: 0;
 	left: 0;
 	z-index: 10;
-    background: #fcfcfc;
+	background: #fff;
 }
 
 .header__inner {
@@ -285,6 +293,7 @@ section {
 	text-transform: uppercase;
 	transition: all 0.3s;
 	position: relative;
+	cursor: pointer;
 }
 
 .desktop-nav__link::before {
@@ -315,6 +324,61 @@ section {
 
 /* HEADER STYLES */
 
+/* POPUP MENU  */
+
+.menu {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0, 0, 0, 0.5);
+	transition: all 0.5s;
+
+	top: -50%;
+	opacity: 0;
+	z-index: -2;
+}
+
+.menu.active {
+	z-index: 1000;
+	top: 64px;
+	opacity: 1;
+}
+
+.menu__inner {
+	width: 100%;
+	padding-left: calc(50vw - 720px);
+	background: #fff;
+	border-radius: 0px 0px 0px 20px;
+
+	display: flex;
+	justify-content: space-between;
+}
+
+.menu__img {
+	max-height: 408px;
+}
+
+.menu__inner-list {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+	margin-top: 62px;
+}
+
+.menu__inner-link {
+	color: #292929;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 130%; /* 26px */
+	text-transform: uppercase;
+}
+
+.menu__inner-link:hover {
+	opacity: 0.8;
+}
+
+/* POPUP MENU  */
+
 /* HERO STYLES */
 .hero {
 	padding-top: 64px;
@@ -324,11 +388,15 @@ section {
 
 .hero__video {
 	position: absolute;
-    width: 100%;
+	width: 100%;
 	height: 100%;
 }
 
 .hero__video video {
+	object-fit: contain;
+	object-position: center;
+	width: 100%;
+	height: 100%;
 }
 
 .hero__logo {
@@ -394,7 +462,8 @@ section {
 }
 
 .text-plate {
-    display: flex;
+	display: flex;
+	overflow: visible;
 }
 
 .text-plate__img {
@@ -413,7 +482,7 @@ section {
 }
 
 .text-plate__text {
-    max-width: 423px;
+	max-width: 423px;
 	margin-top: 15px;
 	color: #757575;
 	font-size: 18px;
@@ -422,3 +491,461 @@ section {
 }
 
 /* ABOUT SECTION STYLES */
+
+/* PRODUCTS SECTION STYLES */
+
+.products {
+	background-color: #f5f5f7;
+}
+
+.products__inner {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.products__swiper {
+	display: flex;
+	gap: 20px;
+	margin-top: 70px;
+}
+
+.products__swiper::-webkit-scrollbar {
+	display: none;
+}
+
+.swiper-card {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+
+	width: 100%;
+	max-width: 645px;
+
+	position: relative;
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+.swiper-card:hover {
+	transform: translate(0px, -20px);
+}
+
+.swiper-card__img {
+	background: #fff;
+	height: 465px;
+	border-radius: 20px;
+	overflow: hidden;
+
+	position: relative;
+}
+
+.swiper__title {
+	color: #292929;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 130%; /* 31.2px */
+	text-transform: uppercase;
+
+	position: absolute;
+	top: 20px;
+	left: 20px;
+}
+
+.swiper__img {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+.swiper-card.active .swiper__title {
+	color: #fff;
+}
+
+.swiper-card.active {
+}
+
+.swiper-card.active .swiper-card__img {
+	background: #020202;
+}
+
+/* PRODUCTS SECTION STYLES */
+
+/* ABOUT-CARDS SECTION STYLES */
+
+.about__inner {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.about-cards__container {
+	display: flex;
+	margin-top: 70px;
+	border-radius: 20px;
+	overflow: hidden;
+}
+
+.about-cards__card {
+	position: relative;
+	height: 874px;
+	width: 33.33%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+	padding: 30px 40px 50px;
+}
+
+.about-cards__img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
+.about-cards__card-title {
+	color: #fff;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 130%; /* 31.2px */
+	text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.about-cards__card-desc {
+	max-width: 383px;
+	color: #fff;
+	font-family: "Be Vietnam Pro";
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 130%; /* 23.4px */
+}
+
+.about-cards__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-cards__top .line {
+    display: block;
+    width: 40px;
+    height: 1px;
+    background: #fff;
+}
+
+.about-cards__top .num {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 130%; /* 31.2px */
+    text-transform: uppercase;
+}
+
+/* ABOUT-CARDS SECTION STYLES */
+
+/* BLOG CARDS ON MAIN PAGE */
+
+.blog-home__inner {
+	padding-top: 20px;
+	padding-bottom: 100px;
+}
+
+.blog-home__wrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+	margin-top: 48px;
+}
+
+.blog__card-img {
+	border-radius: 20px;
+	overflow: hidden;
+	max-height: 452px;
+	height: 100%;
+}
+
+.blog__card-img img {
+	width: 100%;
+	height: 100%;
+}
+
+.blog__card-title {
+	margin-top: 30px;
+	color: #444343;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 130%; /* 31.2px */
+	text-transform: uppercase;
+}
+
+.blog__card-desc {
+	margin-top: 20px;
+	margin-bottom: 51px;
+	color: #292929;
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 130%; /* 23.4px */
+}
+
+.blog__card-bottom {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.blog__card-link {
+	color: #444343;
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 42.067px; /* 233.703% */
+	text-decoration-line: underline;
+}
+
+.blog__card-date {
+	color: #999;
+	font-size: 18px;
+	line-height: 27.043px;
+}
+
+/* BLOG CARDS ON MAIN PAGE */
+
+/* FEEDBACK SECTION */
+
+.feedback {
+	background: #f5f5f7;
+	position: relative;
+}
+
+.feedback::before {
+	content: "";
+	height: 100%;
+	width: 1px;
+	background: #d2d2d2;
+	position: absolute;
+	z-index: 2;
+	top: 50%;
+	left: 50%;
+	transform: translate(0, -50%);
+}
+
+.feedback__inner {
+	display: flex;
+	justify-content: space-between;
+}
+
+.feedback-left {
+	padding-top: 294px;
+	position: sticky;
+	top: 100px;
+	height: fit-content;
+}
+
+.feedback__title {
+	margin-bottom: 50px;
+}
+
+.feedback__subtitle {
+	margin-bottom: 30px;
+	max-width: 654px;
+	color: #111;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.feedback__desc {
+	max-width: 563px;
+	color: #111;
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 130%;
+}
+
+.feedback-right {
+	display: flex;
+	flex-direction: column;
+	gap: 50px;
+	margin-top: 189px;
+}
+
+.feedback-form {
+	flex-direction: column;
+	display: flex;
+	gap: 30px;
+}
+
+.form__title {
+	color: #111;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 130%; /* 26px */
+	text-transform: uppercase;
+	max-width: 488px;
+}
+
+.form__input {
+	background: transparent;
+	border-bottom: 1px solid #d2d2d2;
+	padding-bottom: 20px;
+}
+
+.form__input,
+.form__input::placeholder {
+	color: #111;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 130%; /* 20.8px */
+	text-transform: capitalize;
+}
+
+textarea.form__input {
+}
+
+.form-img {
+	border-radius: 20px;
+	overflow: hidden;
+}
+
+/* FEEDBACK SECTION */
+
+/* FOOTER SECTION */
+
+.footer {
+	border-top: 1px solid #d2d2d2;
+}
+
+.footer__inner {
+	padding: 40px 0 20px;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.footer-left {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 33px;
+}
+
+.footer__logo {
+	width: 183px;
+}
+
+.footer__rights {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.footer__privacy {
+	color: #292929;
+	font-size: 14px;
+	text-decoration-line: underline;
+}
+
+.made-by {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	color: #292929;
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.made-by img {
+	width: 48px;
+}
+
+.rights {
+	color: #292929;
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.footer-center {
+	display: flex;
+	align-items: center;
+	gap: 82px;
+	height: fit-content;
+}
+
+.links-list {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.links-list__item {
+	color: #292929;
+	font-size: 14px;
+	line-height: 130%;
+}
+
+.devider {
+	width: 1px;
+	background: #d2d2d2;
+	height: 100px;
+}
+
+.footer-right {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer__socials {
+	display: flex;
+	gap: 40px;
+	margin-bottom: 42px;
+}
+
+.footer__socials-links {
+	/* width: 20px;
+    height: 20px; */
+	display: block;
+}
+
+.footer__socials-links img {
+	object-fit: contain;
+}
+
+.footer__contacts {
+	flex-direction: column;
+	align-items: flex-end;
+	gap: 15px;
+	display: flex;
+}
+
+.footer__contacts-block {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	cursor: pointer;
+}
+
+.footer__contacts-block img {
+	width: 16px;
+	height: 16px;
+}
+
+.footer__contacts-block a {
+	color: #292929;
+	font-weight: 400;
+	line-height: 150%;
+	white-space: nowrap;
+}
+
+.footer__socials-links:hover,
+.made-by:hover,
+.footer__privacy:hover,
+.footer__contacts-block:hover,
+.links-list__item:hover {
+	opacity: 0.8;
+}
+/* FOOTER SECTION */
