--- a/css/all.css
+++ b/css/all.css
@@ -94,6 +94,8 @@ video {
 body {
 	line-height: 1;
 	background: #fcfcfc;
+	display: flex;
+	flex-direction: column;
 }
 
 article,
@@ -346,7 +348,7 @@ section {
 
 .menu__inner {
 	width: 100%;
-	padding-left: calc(50vw - 720px);
+	padding-left: calc(50vw - 710px);
 	background: #fff;
 	border-radius: 0px 0px 0px 20px;
 
@@ -436,10 +438,33 @@ section {
 
 /* HERO STYLES */
 
+/* BIG IMG */
+
+.big-img {
+	margin: 0px auto;
+	position: relative;
+	top: -200px;
+	width: 231px;
+	height: 120px;
+	border-radius: 100px;
+	overflow: hidden;
+	max-height: 1006px;
+}
+
+.big-img img {
+	width: 100%;
+	height: 100%;
+	object-position: center;
+	object-fit: cover;
+}
+
+/* BIG IMG */
+
 /* ABOUT SECTION STYLES */
 
 .about {
 	padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .about__plates {
@@ -507,6 +532,7 @@ section {
 	display: flex;
 	gap: 20px;
 	margin-top: 70px;
+	overflow: visible;
 }
 
 .products__swiper::-webkit-scrollbar {
@@ -535,7 +561,7 @@ section {
 	height: 465px;
 	border-radius: 20px;
 	overflow: hidden;
-
+	transition: all 0.4s;
 	position: relative;
 }
 
@@ -545,7 +571,7 @@ section {
 	font-weight: 700;
 	line-height: 130%; /* 31.2px */
 	text-transform: uppercase;
-
+	transition: all 0.4s;
 	position: absolute;
 	top: 20px;
 	left: 20px;
@@ -557,14 +583,11 @@ section {
 	left: 0;
 }
 
-.swiper-card.active .swiper__title {
+.swiper-slide-active .swiper__title {
 	color: #fff;
 }
 
-.swiper-card.active {
-}
-
-.swiper-card.active .swiper-card__img {
+.swiper-slide-active .swiper-card__img {
 	background: #020202;
 }
 
@@ -572,7 +595,7 @@ section {
 
 /* ABOUT-CARDS SECTION STYLES */
 
-.about__inner {
+.about-cards__inner {
 	padding-top: 100px;
 	padding-bottom: 100px;
 }
@@ -589,9 +612,9 @@ section {
 	height: 874px;
 	width: 33.33%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
 	padding: 30px 40px 50px;
 }
@@ -611,7 +634,7 @@ section {
 	font-weight: 700;
 	line-height: 130%; /* 31.2px */
 	text-transform: uppercase;
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .about-cards__card-desc {
@@ -624,24 +647,24 @@ section {
 }
 
 .about-cards__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .about-cards__top .line {
-    display: block;
-    width: 40px;
-    height: 1px;
-    background: #fff;
+	display: block;
+	width: 40px;
+	height: 1px;
+	background: #fff;
 }
 
 .about-cards__top .num {
-    color: #FFF;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 130%; /* 31.2px */
-    text-transform: uppercase;
+	color: #fff;
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 130%; /* 31.2px */
+	text-transform: uppercase;
 }
 
 /* ABOUT-CARDS SECTION STYLES */
@@ -949,3 +972,143 @@ textarea.form__input {
 	opacity: 0.8;
 }
 /* FOOTER SECTION */
+
+/* CATALOG PAGE */
+
+.main-catalog {
+	margin-top: 64px;
+}
+
+/* CATALOG HERO SECTION */
+
+.hero-catalog {
+	background: #f5f5f7;
+}
+
+.hero-catalog .container {
+	padding: 0;
+	max-width: none;
+	padding-left: calc(50vw - 710px);
+}
+
+.hero-catalog__inner {
+	display: flex;
+	justify-content: space-between;
+}
+
+.hero-catalog__intro {
+	padding-top: 148px;
+}
+
+.hero-catalog__title {
+	font-size: 40px;
+	margin-bottom: 33px;
+}
+
+.hero-catalog__intro-text {
+	max-width: 397px;
+	color: #000;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 130%; /* 26px */
+}
+
+.hero-catalog__image {
+	max-height: 512px;
+	max-width: 70%;
+}
+
+/* CATALOG HERO SECTION */
+
+/* CATALOG SECTION */
+.catalog-section {
+	padding-top: 70px;
+}
+
+.catalog__inner {
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+
+.catalog__sort {
+	align-self: flex-end;
+}
+
+.catalog {
+	display: flex;
+	gap: 20px;
+}
+
+.catalog__filters {
+	flex-shrink: 0;
+	width: 335px;
+	height: 1071px;
+	border-radius: 20px;
+	background: #f5f5f7;
+}
+
+.catalog__items {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+}
+
+.catalog__card {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.catalog__card-img {
+	border-radius: 20px;
+	background: #f5f5f7;
+	padding: 40px;
+}
+
+.catalog__card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.catalog__card-desc {
+	color: #000;
+	font-size: 14px;
+	line-height: 130%;
+}
+
+.catalog__card-price {
+    color: #000;
+    font-weight: 700;
+    line-height: 130%; /* 20.8px */
+    text-transform: uppercase;  
+}
+
+.read-more-btn {
+	padding: 10px 26px;
+	width: auto;
+	font-size: 14px;
+	font-weight: 600;
+    align-self: flex-start;
+}
+
+.catalog__about-ctrg {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.about-catalog__title {
+    font-size: 40px;
+}
+
+.catalog__about-text {
+    margin-top: 20px;
+    color: #000;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 130%; 
+}
+/* CATALOG SECTION */
+
+/* CATALOG PAGE */
