--- a/css/all.css
+++ b/css/all.css
@@ -194,7 +194,7 @@ input:-webkit-autofill:active {
 .container {
 	display: block;
 	position: relative;
-	/* overflow: hidden; */
+	overflow: hidden;
 	width: 100%;
 	padding: 0 20px;
 	margin: 0 auto 0 auto;
@@ -204,13 +204,17 @@ input:-webkit-autofill:active {
 
 header,
 main,
-footer,
-section {
+footer {
 	display: block;
 	position: relative;
-	/* overflow: hidden; */
+	overflow: hidden;
 	width: 100%;
 }
+
+
+/* header {
+    overflow: hidden;
+} */
 
 /* COMMON STYLES */
 
@@ -236,6 +240,7 @@ section {
 	cursor: pointer;
 	transition: all 0.3s;
 	border: 1px solid transparent;
+    white-space: nowrap;
 }
 
 .catalog-btn:hover {
@@ -254,6 +259,10 @@ section {
 
 .selfEnd {
 	align-self: flex-end;
+}
+
+body.stopScroll {
+    overflow: hidden;
 }
 
 /* COMMON STYLES */
@@ -324,6 +333,51 @@ section {
 	text-transform: uppercase;
 }
 
+
+.burger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 30px;
+    height: 14px;
+    cursor: pointer;
+}
+
+.burger div {
+    width: 100%;
+    height: 1px;
+    background: #000;
+    padding: 0;
+    margin: 0;
+    transition: all 0.3s;
+}
+
+.burger :nth-child(2) {
+    width: 80%;
+}
+
+.burger :last-child {
+    width: 60%;
+}
+
+.burger.active :nth-child(2) {
+    opacity: 0;
+}
+
+.burger.active :first-child {
+    transform: translateY(6px) rotate(-45deg);
+
+}
+
+.burger.active :last-child {
+    transform: translateY(-6px) rotate(45deg);
+    width: 100%;
+    transform-origin: center; 
+}
+
+
+
 /* HEADER STYLES */
 
 /* POPUP MENU  */
@@ -347,13 +401,22 @@ section {
 }
 
 .menu__inner {
-	width: 100%;
-	padding-left: calc(50vw - 710px);
-	background: #fff;
-	border-radius: 0px 0px 0px 20px;
 
+
+
+    margin-left: 20px;
 	display: flex;
 	justify-content: space-between;
+
+    
+}
+
+.menu__container {
+    border-radius: 0px 0px 0px 20px;
+    background: #fff;
+	width: 100%;
+    padding-left: calc(50vw - 720px);
+    margin-left: auto;
 }
 
 .menu__img {
@@ -365,6 +428,7 @@ section {
 	flex-direction: column;
 	gap: 40px;
 	margin-top: 62px;
+    margin-bottom: 122px;
 }
 
 .menu__inner-link {
@@ -380,6 +444,32 @@ section {
 }
 
 /* POPUP MENU  */
+
+
+/* MOBILE MENU */
+
+.mobile-menu {
+    position: fixed;
+    z-index: 8;
+    top: 0;
+    left: -100%;
+    background: #fff;
+    width: 100vw;
+    height: 100vh;
+}
+
+.mobile-menu.active {
+    left: 0;
+}
+
+.mobile-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+/* MOBILE MENU */
+
 
 /* HERO STYLES */
 .hero {
@@ -443,19 +533,34 @@ section {
 .big-img {
 	margin: 0px auto;
 	position: relative;
-	top: -200px;
+	top: -50px;
 	width: 231px;
-	height: 120px;
+	min-height: 120px;
 	border-radius: 100px;
 	overflow: hidden;
-	max-height: 1006px;
 }
 
 .big-img img {
 	width: 100%;
 	height: 100%;
-	object-position: center;
+	/* object-position: center; */
 	object-fit: cover;
+}
+
+.big-img-mobile {
+    position: relative;
+    z-index: 4;
+    display: none;
+    margin: 0px auto;
+    margin-top: 50px;
+    overflow: hidden;
+}
+
+.big-img-mobile img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* BIG IMG */
@@ -484,6 +589,10 @@ section {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
+}
+
+.img-plate img {
+    height: 100%;
 }
 
 .text-plate {
@@ -583,6 +692,7 @@ section {
 	left: 0;
 }
 
+
 .swiper-slide-active .swiper__title {
 	color: #fff;
 }
@@ -677,8 +787,7 @@ section {
 }
 
 .blog-home__wrapper {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+	display: flex;
 	gap: 20px;
 	margin-top: 48px;
 }
@@ -691,6 +800,7 @@ section {
 }
 
 .blog__card-img img {
+    object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
@@ -754,9 +864,14 @@ section {
 	transform: translate(0, -50%);
 }
 
+.feedback .container {
+    overflow: visible;
+}
+
 .feedback__inner {
 	display: flex;
 	justify-content: space-between;
+    gap: 100px;
 }
 
 .feedback-left {
@@ -826,9 +941,6 @@ section {
 	text-transform: capitalize;
 }
 
-textarea.form__input {
-}
-
 .form-img {
 	border-radius: 20px;
 	overflow: hidden;
@@ -844,7 +956,7 @@ textarea.form__input {
 
 .footer__inner {
 	padding: 40px 0 20px;
-
+    gap: 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -861,7 +973,8 @@ textarea.form__input {
 	width: 183px;
 }
 
-.footer__rights {
+.footer__rights,
+.footer__rights-mobile {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -970,6 +1083,10 @@ textarea.form__input {
 .footer__contacts-block:hover,
 .links-list__item:hover {
 	opacity: 0.8;
+}
+
+.footer__rights-mobile {
+    display: none;
 }
 /* FOOTER SECTION */
 
