--- a/css/all.css
+++ b/css/all.css
@@ -211,7 +211,6 @@ footer {
 	width: 100%;
 }
 
-
 /* header {
     overflow: hidden;
 } */
@@ -240,7 +239,7 @@ footer {
 	cursor: pointer;
 	transition: all 0.3s;
 	border: 1px solid transparent;
-    white-space: nowrap;
+	white-space: nowrap;
 }
 
 .catalog-btn:hover {
@@ -262,7 +261,7 @@ footer {
 }
 
 body.stopScroll {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 /* COMMON STYLES */
@@ -333,50 +332,46 @@ body.stopScroll {
 	text-transform: uppercase;
 }
 
-
 .burger {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 30px;
-    height: 14px;
-    cursor: pointer;
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-end;
+	width: 30px;
+	height: 14px;
+	cursor: pointer;
 }
 
 .burger div {
-    width: 100%;
-    height: 1px;
-    background: #000;
-    padding: 0;
-    margin: 0;
-    transition: all 0.3s;
+	width: 100%;
+	height: 1px;
+	background: #000;
+	padding: 0;
+	margin: 0;
+	transition: all 0.3s;
 }
 
 .burger :nth-child(2) {
-    width: 80%;
+	width: 80%;
 }
 
 .burger :last-child {
-    width: 60%;
+	width: 60%;
 }
 
 .burger.active :nth-child(2) {
-    opacity: 0;
+	opacity: 0;
 }
 
 .burger.active :first-child {
-    transform: translateY(6px) rotate(-45deg);
-
+	transform: translateY(6px) rotate(-45deg);
 }
 
 .burger.active :last-child {
-    transform: translateY(-6px) rotate(45deg);
-    width: 100%;
-    transform-origin: center; 
+	transform: translateY(-6px) rotate(45deg);
+	width: 100%;
+	transform-origin: center;
 }
-
-
 
 /* HEADER STYLES */
 
@@ -401,22 +396,17 @@ body.stopScroll {
 }
 
 .menu__inner {
-
-
-
-    margin-left: 20px;
+	margin-left: 20px;
 	display: flex;
 	justify-content: space-between;
-
-    
 }
 
 .menu__container {
-    border-radius: 0px 0px 0px 20px;
-    background: #fff;
+	border-radius: 0px 0px 0px 20px;
+	background: #fff;
 	width: 100%;
-    padding-left: calc(50vw - 720px);
-    margin-left: auto;
+	padding-left: calc(50vw - 720px);
+	margin-left: auto;
 }
 
 .menu__img {
@@ -428,7 +418,7 @@ body.stopScroll {
 	flex-direction: column;
 	gap: 40px;
 	margin-top: 62px;
-    margin-bottom: 122px;
+	margin-bottom: 122px;
 }
 
 .menu__inner-link {
@@ -445,31 +435,44 @@ body.stopScroll {
 
 /* POPUP MENU  */
 
-
 /* MOBILE MENU */
 
 .mobile-menu {
-    position: fixed;
-    z-index: 8;
-    top: 0;
-    left: -100%;
-    background: #fff;
-    width: 100vw;
-    height: 100vh;
+	position: fixed;
+	z-index: 8;
+	top: 0;
+	left: -100%;
+	background: #fff;
+	width: 100vw;
+	height: 100vh;
+	display: none;
+	transition: all 0.3s;
 }
 
 .mobile-menu.active {
-    left: 0;
+	left: 0;
+	display: block;
 }
 
 .mobile-nav {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	margin-top: 64px;
+	padding-left: 20px;
+}
+
+.mobile-nav__link {
+	color: #292929;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.mobile-nav__link:hover {
+    opacity: 0.8;
 }
 
 /* MOBILE MENU */
-
 
 /* HERO STYLES */
 .hero {
@@ -548,19 +551,19 @@ body.stopScroll {
 }
 
 .big-img-mobile {
-    position: relative;
-    z-index: 4;
-    display: none;
-    margin: 0px auto;
-    margin-top: 50px;
-    overflow: hidden;
+	position: relative;
+	z-index: 4;
+	display: none;
+	margin: 0px auto;
+	margin-top: 50px;
+	overflow: hidden;
 }
 
 .big-img-mobile img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 /* BIG IMG */
@@ -569,7 +572,7 @@ body.stopScroll {
 
 .about {
 	padding-top: 100px;
-    padding-bottom: 100px;
+	padding-bottom: 100px;
 }
 
 .about__plates {
@@ -592,7 +595,7 @@ body.stopScroll {
 }
 
 .img-plate img {
-    height: 100%;
+	height: 100%;
 }
 
 .text-plate {
@@ -691,7 +694,6 @@ body.stopScroll {
 	bottom: 0;
 	left: 0;
 }
-
 
 .swiper-slide-active .swiper__title {
 	color: #fff;
@@ -800,7 +802,7 @@ body.stopScroll {
 }
 
 .blog__card-img img {
-    object-fit: cover;
+	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
@@ -865,13 +867,13 @@ body.stopScroll {
 }
 
 .feedback .container {
-    overflow: visible;
+	overflow: visible;
 }
 
 .feedback__inner {
 	display: flex;
 	justify-content: space-between;
-    gap: 100px;
+	gap: 100px;
 }
 
 .feedback-left {
@@ -956,7 +958,7 @@ body.stopScroll {
 
 .footer__inner {
 	padding: 40px 0 20px;
-    gap: 20px;
+	gap: 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -1086,7 +1088,7 @@ body.stopScroll {
 }
 
 .footer__rights-mobile {
-    display: none;
+	display: none;
 }
 /* FOOTER SECTION */
 
@@ -1184,9 +1186,9 @@ body.stopScroll {
 }
 
 .catalog__card-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 .catalog__card-desc {
@@ -1196,10 +1198,10 @@ body.stopScroll {
 }
 
 .catalog__card-price {
-    color: #000;
-    font-weight: 700;
-    line-height: 130%; /* 20.8px */
-    text-transform: uppercase;  
+	color: #000;
+	font-weight: 700;
+	line-height: 130%; /* 20.8px */
+	text-transform: uppercase;
 }
 
 .read-more-btn {
@@ -1207,24 +1209,24 @@ body.stopScroll {
 	width: auto;
 	font-size: 14px;
 	font-weight: 600;
-    align-self: flex-start;
+	align-self: flex-start;
 }
 
 .catalog__about-ctrg {
-    padding-top: 70px;
-    padding-bottom: 70px;
+	padding-top: 70px;
+	padding-bottom: 70px;
 }
 
 .about-catalog__title {
-    font-size: 40px;
+	font-size: 40px;
 }
 
 .catalog__about-text {
-    margin-top: 20px;
-    color: #000;
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 130%; 
+	margin-top: 20px;
+	color: #000;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 130%;
 }
 /* CATALOG SECTION */
 
