--- a/css/media.css
+++ b/css/media.css
@@ -22,6 +22,10 @@
     .menu__img img {
         height: 100%;
     }
+
+    .hero-catalog__image {
+        max-width: 60%;
+    }
 }
 
 @media screen and (max-width: 1310px) {
@@ -83,6 +87,64 @@
 		gap: 30px;
 	}
 
+}
+
+@media screen and (max-width: 1100px) {
+    .single-hero {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .item__title {
+        font-size: 20px;
+    }
+
+    .single-list {
+        gap: 5px;
+    }
+
+    .single-list__item p {
+        font-size: 14px;
+    }
+
+    .grey-text {
+        font-size: 14px;
+    }
+
+    .articul, .single-price {
+        margin-top: 10px;
+    }
+
+    .single-desc, .single-type {
+        margin-top: 10px;
+    }
+
+    .articul p,
+    .single-price h3 {
+        font-size: 16px;
+    }
+
+    .single__btns a {
+        font-size: 14px;
+    }
+
+    .single__btns {
+        margin-top: 10px;
+    }
+
+    .single-quantity {
+        margin-top: 10px;
+    }
+
+    .single-quantity__mark {
+        width: 20px;
+        height: 20px;
+        font-size: 16px;
+    }
+
+    .single-quantity span {
+        font-size: 16px;
+    }
 }
 
 @media screen and (max-width: 1024px) {
@@ -211,6 +273,23 @@
     .about__plate {
         height: auto;
     }
+
+    .hero-catalog__intro-text {
+        font-size: 14px;
+    }
+
+    .catalog__about-text {
+        font-size: 16px;
+    }
+
+    .catalog__items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .catalog__filters {
+        flex-shrink: 1;
+        min-width: 250px;
+    }
 }
 
 @media screen and (max-width: 890px) {
@@ -282,6 +361,75 @@
 
     .big-img-mobile {
         display: block;
+    }
+
+    .hero-catalog__title {
+        margin-bottom: 15px;
+    }
+
+    .catalog {
+        flex-direction: column;
+    }
+
+    .catalog-section {
+        padding-top: 16px;
+    }
+
+    .catalog__filters {
+        height: 30px;
+        width: 100%;
+    }
+
+    .catalog__about-ctrg {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .catalog__about-text {
+        margin-top: 10px;
+    }
+
+    .main-single-good {
+        margin-top: 40px;
+    }
+
+    .single__title {
+        font-size: 20px;
+    }
+
+    .single-desc__list {
+        margin-top: 10px;
+    }
+
+    .single-desc__item {
+        font-size: 14px;
+    }
+
+    .main-single-good {
+        margin-top: 40px;
+    }
+
+
+
+    .single-section-desc {
+        padding-bottom: 60px;
+    }
+
+    .single-hero__inner {
+        flex-direction: column;
+    }
+
+    .single-hero__left {
+        width: 100%;
+    }
+
+    .accessories-section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .may-like-section {
+        padding-bottom: 60px;
     }
 }
 
@@ -396,7 +544,25 @@
         max-width: none;
     }
 
+    .hero-catalog__inner {
+        flex-direction: column;
+        gap: 27px;
+        padding-top: 60px;
+        align-items: flex-start;
+    }
+
+    .hero-catalog__image {
+        max-width: 100%;
+    }
+
 }
+
+@media screen and (max-width: 650px) {
+    .catalog__items {
+        grid-template-columns: 1fr;
+    }  
+}
+
 
 @media screen and (max-width: 600px) {
     .hero__block {
