--- a/css/media.css
+++ b/css/media.css
@@ -36,6 +36,10 @@
 
 @media screen and (max-width: 1200px) {
 
+    .posts__wrapper {
+        grid-auto-rows: 573px;
+    }
+
     .menu__inner-link {
         font-size: 16px;
     }
@@ -148,6 +152,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .posts__wrapper {
+        grid-auto-rows: 505px;
+    }
+
 	.catalog-btn {
 		font-size: 14px;
 		width: unset;
@@ -389,7 +397,11 @@
         margin-top: 10px;
     }
 
-    .main-single-good {
+    .main-single-good,
+    .main-posts,
+    .main-single,
+    .main-contact,
+    .main-about {
         margin-top: 40px;
     }
 
@@ -430,6 +442,11 @@
 
     .may-like-section {
         padding-bottom: 60px;
+    }
+
+
+    .posts__wrapper {
+        grid-auto-rows: 413px;
     }
 }
 
@@ -477,6 +494,20 @@
 		object-fit: cover;
 		object-position: center;
 	}
+
+    .posts-section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .single-section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .single-pagination {
+        margin-top: 30px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -555,6 +586,22 @@
         max-width: 100%;
     }
 
+
+    .contact__hero-contacts {
+        padding: 20px;
+    }
+
+    .contact-block {
+        gap: 5px;
+    }
+
+    .contact-block__text {
+        font-size: 14px;
+    }
+
+    .contact__hero-inner {
+        margin: 60px 0;
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -619,6 +666,12 @@
 
     .footer__rights-mobile {
         display: flex;
+    }
+
+    .posts__wrapper {
+        margin-top: 15px;
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
     }
 }
 
