--- a/css/media.css
+++ b/css/media.css
@@ -91,6 +91,22 @@
 		gap: 30px;
 	}
 
+
+    .hero-about__inner {
+        height: 500px;
+    }
+
+    .hero-about__left {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 30px;
+    }
+
+    .hero-about__desc {
+        max-width: 610px;
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -448,6 +464,46 @@
     .posts__wrapper {
         grid-auto-rows: 413px;
     }
+
+
+    .partners {
+        padding-top: 60px;
+        padding-bottom: 30px;
+    }
+
+    .reviews {
+        padding-bottom: 60px;
+    }
+
+    .reviews-top {
+        margin-bottom: 30px;
+    }
+
+    .partners-title {
+        margin-bottom: 15px;
+    }
+
+    .partners-logos {
+        padding-bottom: 60px;
+    }
+
+    .partners-logos__item {
+        height: 50px;
+        width: 295px;
+    }
+
+    .partners__desc {
+        font-size: 14px;
+        max-width: 690px;
+    }
+
+    .review-card {
+        gap: 50px;
+    }
+
+    .review-card__text {
+        font-size: 16px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -507,6 +563,30 @@
 
     .single-pagination {
         margin-top: 30px;
+    }
+
+
+    .hero-about__desc {
+        font-size: 14px;
+    }
+
+    .hero-about__right {
+        position: static;
+        max-width: 100%;
+        max-height: 300px;
+    }
+
+    .hero-about__left {
+        padding: 0;
+        padding-top: 60px;
+        background: transparent;
+        border-radius: none;
+        margin-right: 20px;
+    }
+
+    .hero-about__inner {
+        height: unset;
+        gap: 20px;
     }
 }
 
@@ -602,6 +682,16 @@
     .contact__hero-inner {
         margin: 60px 0;
     }
+
+
+    .review-card {
+        gap: 30px;
+    }
+
+    .review-card__text,
+    .review-card__date {
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -672,6 +762,48 @@
         margin-top: 15px;
         grid-template-columns: 1fr;
         grid-auto-rows: auto;
+    }
+
+    .review-card {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .review-card__left {
+        gap: 10px;
+    }
+
+    .review-card__right {
+        gap: 10px;
+    }
+
+    .reviews-top {
+        margin-bottom: 15px;
+        gap: 20px;
+    }
+
+    .reviews-pagination {
+        gap: 10px;
+    }
+
+    .swiper-button-next, .swiper-button-prev {
+        width: 40px;
+        height: 40px;
+    }
+
+    .swiper-button-next::after, .swiper-button-prev::after {
+        font-size: 12px;
+    }
+
+    .mobile-nav {
+        gap: 15px;
+    }
+
+    .mobile-nav__link {
+        font-size: 14px;
     }
 }
 
